Google search on new tab, UI improvements